--- a/HitomiScrollViewerWebApp/Components/Layout/NavMenu.razor
+++ b/HitomiScrollViewerWebApp/Components/Layout/NavMenu.razor
@@ -10,19 +10,13 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Search
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="browse">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Browse
             </NavLink>
         </div>
     </nav>
