--- a/HitomiScrollViewerWebApp/Components/_Imports.razor
+++ b/HitomiScrollViewerWebApp/Components/_Imports.razor
@@ -5,6 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.FluentUI.AspNetCore.Components
+@using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
 @using Microsoft.JSInterop
 @using HitomiScrollViewerWebApp
 @using HitomiScrollViewerWebApp.Components
