turns out OpenBrowser function is needed

--- a/HitomiScrollViewerWebApp/Components/Layout/NavMenu.razor
+++ b/HitomiScrollViewerWebApp/Components/Layout/NavMenu.razor
@@ -5,9 +5,8 @@
     <label for="navmenu-toggle" class="navmenu-icon"><FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Fill" /></label>
     <nav class="sitenav" aria-labelledby="main-menu">
         <FluentNavMenu Id="main-menu" Collapsible="true" Width="250" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
-            <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
-            <FluentNavLink Href="counter" Icon="@(new Icons.Regular.Size20.NumberSymbolSquare())" IconColor="Color.Accent">Counter</FluentNavLink>
-            <FluentNavLink Href="weather" Icon="@(new Icons.Regular.Size20.WeatherPartlyCloudyDay())" IconColor="Color.Accent">Weather</FluentNavLink>
+            <FluentNavLink Href="search" Icon="@(new Icons.Regular.Size20.Search())" IconColor="Color.Accent">Search</FluentNavLink>
+            <FluentNavLink Href="browse" Icon="@(new Icons.Regular.Size20.Folder())" IconColor="Color.Accent">Browse</FluentNavLink>
         </FluentNavMenu>
     </nav>
 </div>
