--- a/HitomiScrollViewerWebApp/Components/Pages/Home.razor
+++ b/HitomiScrollViewerWebApp/Components/Pages/Home.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new Fluent Blazor app.
+@code {
+    protected override void OnInitialized() => NavigationManager.NavigateTo("/search");
+}
