in progress of implementing DatabaseInitializer

--- a/HitomiScrollViewerWebApp/Components/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Components/Pages/Search.razor
@@ -2,11 +2,11 @@
 
 <PageTitle>Search</PageTitle>
 
-<div style="grid-template-columns: 75% 25%;">
+<div style="grid-template-columns: 75% 25%; height: 100%">
     <div style="grid-column: 1; grid-template-rows: min-content min-content 1fr;">
-        <FluentSelect Width="600px"
-                      TOption="string"
-                      />
+        <div style="grid-row: 1">
+            <TagFilterEditor></TagFilterEditor>
+        </div>
     </div>
     <div style="grid-column: 2; grid-template-rows: min-content 1fr 1fr;">
 
