--- a/HitomiScrollViewerWebApp/Components/_Imports.razor
+++ b/HitomiScrollViewerWebApp/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using Microsoft.JSInterop
 @using HitomiScrollViewerWebApp
 @using HitomiScrollViewerWebApp.Components
+@using HitomiScrollViewerData.Entities;
