God why doesnt it work

--- a/HitomiScrollViewerWebApp/Components/_Imports.razor
+++ b/HitomiScrollViewerWebApp/Components/_Imports.razor
@@ -10,4 +10,5 @@
 @using Microsoft.JSInterop
 @using HitomiScrollViewerWebApp
 @using HitomiScrollViewerWebApp.Components
+@using HitomiScrollViewerWebApp.Services
 @using HitomiScrollViewerData.Entities;
