--- a/HitomiScrollViewerWebApp/Components/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Components/Layout/MainLayout.razor
@@ -1,16 +1,22 @@
 ﻿@inherits LayoutComponentBase
+@inject DatabaseInitializer DatabaseInitializer
+@implements IDisposable
 
 <FluentLayout>
     <FluentHeader>
         HitomiScrollViewerWebApp
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
-        <NavMenu />
-        <FluentBodyContent Class="body-content">
-            <div class="content">
-                @Body
-            </div>
-        </FluentBodyContent>
+        @if (DatabaseInitializer.IsInitialized) {
+            <NavMenu />
+            <FluentBodyContent Class="body-content">
+                <div class="content">
+                    @Body
+                </div>
+            </FluentBodyContent>
+        } else {
+            <p>Loading...</p>
+        }
     </FluentStack>
     <FluentFooter>
         <a href="https://www.fluentui-blazor.net" target="_blank">Documentation and demos</a>
@@ -24,3 +30,20 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+
+@code {
+    protected override void OnInitialized()
+    {
+        DatabaseInitializer.Initialized += OnDbInitialized;
+    }
+
+    public void Dispose() {
+        DatabaseInitializer.Initialized -= OnDbInitialized;
+    }
+
+    private void OnDbInitialized() {
+        Console.WriteLine("before initialize invoked " + DatabaseInitializer.IsInitialized);
+        StateHasChanged();
+        Console.WriteLine("after initialize invoked " + DatabaseInitializer.IsInitialized);
+    }
+}
