--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -3,12 +3,15 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
+
 @using Microsoft.JSInterop
 @using HitomiScrollViewerWebApp
+@using HitomiScrollViewerWebApp.Layout
 @using HitomiScrollViewerWebApp.Components
+
 @using HitomiScrollViewerWebApp.Services
 @using HitomiScrollViewerData.Entities;
