--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -13,5 +13,4 @@
 @using HitomiScrollViewerWebApp.Layout
 @using HitomiScrollViewerWebApp.Components
 
-@using HitomiScrollViewerWebApp.Services
-@using HitomiScrollViewerData.Entities;
+@using HitomiScrollViewerData.Entities
