implemented db init status update

--- a/HitomiScrollViewerWebApp/Pages/Search.razor
+++ b/HitomiScrollViewerWebApp/Pages/Search.razor
@@ -1,14 +1,70 @@
 ﻿@page "/search"
+@using HitomiScrollViewerData
+@using Microsoft.AspNetCore.SignalR.Client
+@implements IAsyncDisposable
 
 <PageTitle>Search</PageTitle>
 
 <div style="grid-template-columns: 75% 25%; height: 100%">
-    <div style="grid-column: 1; grid-template-rows: min-content min-content 1fr;">
+    <div style="grid-column: 1; grid-template-rows: min-content 1fr;">
         <div style="grid-row: 1">
             <TagFilterEditor></TagFilterEditor>
         </div>
     </div>
     <div style="grid-column: 2; grid-template-rows: min-content 1fr 1fr;">
-
+        <div>@_status</div>
+        <button @onclick="StartInitialize">Start Initialize</button>
     </div>
 </div>
+
+@code {
+    private HubConnection hubConnection;
+    private string _status = "Waiting to receive status...";
+
+    protected override void OnInitialized()
+    {
+        hubConnection = new HubConnectionBuilder()
+            .WithUrl("https://localhost:7076/api/initialize")
+            .Build();
+
+        hubConnection.On<InitStatus, InitProgress?>("ReceiveStatus", UpdateStatus);
+    }
+
+    private void StartInitialize()
+    {
+        hubConnection.StartAsync();
+    }
+
+    private void UpdateStatus(InitStatus status, InitProgress? progress)
+    {
+        switch (status)
+        {
+            case InitStatus.InProgress:
+                {
+                    // TODO
+                    switch (progress)
+                    {
+                        case InitProgress.AddingTags:
+                            {
+                                _status = "Adding tags...";
+                                break;
+                            }
+                    }
+                    break;
+                }
+            case InitStatus.Complete:
+                {
+                    break;
+                }
+        }
+        InvokeAsync(StateHasChanged);
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        if (hubConnection is not null)
+        {
+            await hubConnection.DisposeAsync();
+        }
+    }
+}
